# AutoVet

code/: CMakeLists.txt
code/cmake/: Version.cmake
code/engine/: CMakeLists.txt
code/engine/headers/components/: vetabnormality.h
code/engine/headers/datamanager/: vetdataconnection.h  vetdataentry.h  vetdatamanager.h  vetsqliteconnection.h
code/engine/sources/components/: vetabnormality.cpp
code/engine/sources/datamanager/: vetdataconnection.cpp  vetdataentry.cpp  vetdatamanager.cpp  vetsqliteconnection.cpp
code/main/: CMakeLists.txt
code/main/sources/: vetmain.cpp
